# RacingSim

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/racingsim/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  renderer.cpp  renderer.h  shader_sources.h  track_mesh.cpp  track_mesh.h  vehicle.cpp  vehicle.h
app/src/main/cpp/math_glm/: geometric.hpp  glm.hpp
app/src/main/cpp/math_glm/gtc/: constants.hpp  matrix_transform.hpp  type_ptr.hpp
app/src/main/java/com/example/racingsim/: MainActivity.java
app/src/main/java/com/example/racingsim/gl/: GeometryFactory.java  Map3DRenderer.java  Map3DView.java  Mesh.java  ShaderProgram.java  TextureUtils.java  TexturedProgram.java
app/src/main/java/com/example/racingsim/model/: DefaultMapPointsProvider.java  MapPoints.java  MapPointsProvider.java
app/src/main/java/com/example/racingsim/preview/: PreviewActivity.java
app/src/main/java/com/example/racingsim/track/: TrackData.java  TrackGenerator.java  TrackRenderer.java
app/src/main/java/com/example/racingsim/ui/: Map3DActivity.java
app/src/main/res/drawable/: ic_moon.xml  ic_sun.xml  pedal_background.xml  start_background.xml
app/src/main/res/layout/: activity_main.xml  activity_map_3d.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/racingsim/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
